# dudustatus

./: Cargo.toml  README.md
src/: colors.rs  config.rs  main.rs
src/colors/: gruvbox.rs  mod.rs
src/modules/: battery.rs  bspwm.rs  cpu.rs  mod.rs  nmcli.rs  pamixer.rs  playerctl.rs  ram.rs  spacer.rs  spotify.rs  time.rs  weather.rs
