[package]
name = "dudustatus"
version = "0.1.0"
authors = ["Edu Renesto <edure95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.2.3"
reqwest = { version = "0.10.1", features = ["blocking"] }
serde_json = "1.0"
voca_rs = "1.9.1"
